# Projeto-Algoritmos-e-estruturas-de-dados

./: .gitignore  CMakeLists.txt  README.md  main.c  r1_1_text_matrix.c  r1_1_text_matrix.h  strings.txt
Fase1/: PesquisaSubstrings.c  PesquisaSubstrings.h  R1.2 - Manipulação do texto e tokens.c  R1.2 - Manipulação do texto e tokens.h  R1.3 - Cálculo do alfabeto de tokens do corpus textual.c  R1.3 - Cálculo do alfabeto de tokens do corpus textual.h  r1_1_text_matrix.c  r1_1_text_matrix.h  r1_2_text_and_tokens.c  r1_2_text_and_tokens.h  r1_3_alphabet_tokens.c  r1_3_alphabet_tokens.h  r1_4_tokenization.c  r1_4_tokenization.h  r1_5_term_frequency.c  r1_5_term_frequency.h  r1_6_similarity.c  r1_6_similarity.h
Fase2/: Teste2_3.txt  r2_1_linked_list.c  r2_1_linked_list.h  r2_2_dynamic_matrix.c  r2_2_dynamic_matrix.h  r2_3_text_files.c  r2_3_text_files.h  r2_4_binary_files.c  r2_4_binary_files.h
doxygen/: Doxyfile  doxygen_log.txt
doxygen/html/: _c_1_2_users_2tiago_2_one_drive_2_documentos_2_git_hub_2_projeto-_algoritmos-e-estruturas-de-dad2c1e6041689334a4f13b6ac3b8fa56ee.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_b05fe06ffbb6fc90025b549032165d26.html  dir_b05fe06ffbb6fc90025b549032165d26.js  dir_f96b9d1b40af0bf329f57f6f896d1bd1.html  dir_f96b9d1b40af0bf329f57f6f896d1bd1.js  doxygen_crawl.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  main_8c.html  main_8c_source.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  (+67 more)
(+185 files in other folders)
